--- a/src/index.html
+++ b/src/index.html
@@ -11,4 +11,15 @@
     <h2>    new heading </h2>
 <div id="root">
 </div>
+    
+    <div id="shape-creator">
+  <select id="shape-type">
+    <option value="square" selected>Square</option>
+    <option value="circle">Circle</option>
+  </select>
+  <button id="add-shape">Add shape</button>
+</div>
+
+<div id="shapes-holder"></div>
+
 </html>
